<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/app_background"

    android:layout_height="match_parent">


    <Button
        android:id="@+id/signup_BTN_goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:fontFamily="serif"
        android:textSize="16dp"

        android:backgroundTint="@color/barber_red"
        android:layout_marginTop="16dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/signIn_IMG_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/app_logo"
        />

    <TextView
        android:id="@+id/signup_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_label"
        android:textSize="48dp"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:layout_marginTop="175dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/signup_BOX_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name_hint"
        android:textSize="20dp"

        android:fontFamily="serif"
        android:textColorHint="@color/black"
        android:background="@color/transperant"

        app:layout_constraintTop_toBottomOf="@id/signup_LBL_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/signup_BOX_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_label"
        android:textSize="20dp"

        android:fontFamily="serif"
        android:textColorHint="@color/black"
        android:background="@color/transperant"

        app:layout_constraintTop_toBottomOf="@id/signup_BOX_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textEmailAddress"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/signup_BOX_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_label"
        android:textSize="20dp"

        android:fontFamily="serif"
        android:textColorHint="@color/black"
        android:background="@color/transperant"

        app:layout_constraintTop_toBottomOf="@id/signup_BOX_email"
        app:layout_constraintStart_toStartOf= "parent"
        app:layout_constraintEnd_toEndOf= "parent"
        android:inputType= "textPassword"
        android:padding= "8dp"/>


    <EditText
        android:id= "@+id/signup_BOX_phoneNumber"
        android:layout_width= "0dp"
        android:layout_height= "wrap_content"
        android:hint="@string/phone_number_hint"
        android:fontFamily="serif"
        android:textColorHint="@color/black"
        android:background="@color/transperant"
        app:layout_constraintTop_toBottomOf= "@id/signup_BOX_password"
        app:layout_constraintStart_toStartOf= "parent"
        app:layout_constraintEnd_toEndOf= "parent"
        android:inputType= "phone"
        android:textSize="20dp"
        android:padding= "8dp"/>

    <!-- User type selection -->
    <RadioGroup
        android:id="@+id/signup_radioGroup_userType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/signup_BOX_phoneNumber"
        app:layout_constraintBottom_toTopOf="@+id/signup_BTN_submit"
        >

        <RadioButton
            android:id="@+id/signup_radioButton_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userType_client"
            android:fontFamily="serif"
            android:textSize="18dp"
            android:checked="true" />

        <RadioButton
            android:id="@+id/signup_radioButton_barber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textSize="18dp"
            android:text="@string/userType_barber" />
    </RadioGroup>

    <Button
        android:id="@+id/signup_BTN_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        app:layout_constraintTop_toBottomOf="@id/signup_radioGroup_userType"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="serif"
        android:textSize="20dp"
        android:backgroundTint="@color/barber_red"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>