<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@color/barber_grey1"
    android:layout_marginBottom="8dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/calendar_icon"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/barberAppItem_TXT_appointmentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_time"
            android:textSize="20dp"
            android:fontFamily="serif"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/barberAppItem_TXT_customerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:text="@string/user_name"
            android:textSize="20dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/barberAppItem_BTN_cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:textSize="16dp"

        android:textColor="@color/white"
        android:backgroundTint="@color/barber_red"
        android:fontFamily="serif"
        android:layout_gravity="center_vertical"/>
</LinearLayout>
