<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/app_background"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/signIn_BTN_goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:fontFamily="serif"
        android:textSize="16dp"
        android:backgroundTint="@color/barber_red"
        android:layout_marginTop="16dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/signIn_IMG_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/app_logo"
         />


    <TextView
        android:id="@+id/signIn_LBL_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_label"
        android:textSize="48dp"
        android:fontFamily="serif"
        android:paddingBottom="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="175dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/signIn_TXT_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/barber_grey2"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_values"
        android:fontFamily="serif"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/signIn_LBL_signin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/signIn_TXT_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_values"
        android:fontFamily="serif"
        android:hint="@string/password_hint"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/barber_grey2"
        android:inputType="textPassword"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/signIn_TXT_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn_BTN_SignIn"
        android:layout_width="wrap_content"
        android:fontFamily="serif"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button"
        android:backgroundTint="@color/barber_red"
        android:textSize="18dp"

        app:layout_constraintTop_toBottomOf="@id/signIn_TXT_password"
        app:layout_constraintStart_toStartOf= "parent"
        app:layout_constraintEnd_toEndOf= "parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="@color/barber_grey2"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signIn_BTN_SignIn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/new_user"
            android:textStyle="bold"
            android:textSize="18dp"

            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signIn_BTN_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="serif"
            android:padding="0dp"
            android:textSize="18dp"

            android:textStyle="bold"
            android:text="@string/sign_up_here"
            android:textColor="@color/barber_red" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>