<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@drawable/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">



        <ImageView
            android:id="@+id/userProfile_IMG_profilePicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile_logo"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_information"
            android:textSize="26dp"
            android:fontFamily="serif"
            android:textColor="@color/black"

            android:textStyle="normal"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/barber_grey1"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:text="@string/name_label_info"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/userProfile_TXT_name"
                android:layout_width="0dp"
                android:background="@color/barber_grey1"
                android:fontFamily="serif"
                android:textColor="@color/black"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email_label_info"
                android:background="@color/barber_grey1"
                android:fontFamily="serif"
                android:textColor="@color/black"

                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/userProfile_TXT_email"
                android:layout_width="0dp"
                android:background="@color/barber_grey1"
                android:fontFamily="serif"
                android:textColor="@color/black"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_label"
                android:fontFamily="serif"
                android:textColor="@color/black"

                android:textSize="20dp"
                android:background="@color/barber_grey1"

                android:textStyle="normal" />

            <TextView
                android:id="@+id/userProfile_TXT_phone"
                android:layout_width="0dp"
                android:background="@color/barber_grey1"
                android:fontFamily="serif"
                android:textColor="@color/black"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/userProfile_TXT_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textSize="18dp"
            />

        <Button
            android:id="@+id/userProfile_BTM_bookNewAppointment"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/book_new_appointment"
            android:fontFamily="serif"
            android:textSize="16dp"
            android:backgroundTint="@color/barber_red"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/userProfile_BTN_existingAppointments"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/your_appointments"
            android:fontFamily="serif"
            android:textSize="16dp"
            android:backgroundTint="@color/barber_red"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp" />


        <Button
            android:id="@+id/userProfile_BTN_rateBarber"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/user_rating"
            android:fontFamily="serif"
            android:textSize="16dp"
            android:backgroundTint="@color/barber_red"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/userProfile_BTN_catalog"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/catalog"
            android:textSize="16dp"
            android:fontFamily="serif"
            android:backgroundTint="@color/barber_red"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/userProfile_BTN_signOut"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:fontFamily="serif"
            android:textSize="16dp"

            android:backgroundTint="@color/barber_red"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp" />

    </LinearLayout>

</ScrollView>