<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@drawable/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/barberProfile_IMG_profilePicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile_logo"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_information"
            android:textSize="28dp"
            android:fontFamily="serif"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/barber_grey1"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:text="@string/name_label_info"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/barberProfile_TXT_name"
                android:layout_width="0dp"
                android:background="@color/barber_grey1"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email_label_info"
                android:background="@color/barber_grey1"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/barberProfile_TXT_email"
                android:layout_width="0dp"
                android:background="@color/barber_grey1"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_label"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:background="@color/barber_grey1"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/barberProfile_TXT_phone"
                android:layout_width="0dp"
                android:background="@color/barber_grey1"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/barber_rating"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:background="@color/barber_grey1"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/barberProfile_TXT_rating"
                android:layout_width="0dp"
                android:background="@color/barber_grey1"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp" />
        </LinearLayout>

        <Button
            android:id="@+id/barberProfile_BTM_bookNewAppointment"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/barber_upcoming_appointments"
            android:fontFamily="serif"
            android:textSize="16dp"
            android:backgroundTint="@color/barber_red"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/barberProfile_BTN_catalog"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/catalog"
            android:fontFamily="serif"
            android:textSize="16dp"

            android:backgroundTint="@color/barber_red"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/barberProfile_BTN_signOut"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:fontFamily="serif"
            android:textSize="16dp"

            android:backgroundTint="@color/barber_red"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp" />
    </LinearLayout>
</ScrollView>
